# PlasticObs-_AI_Library

./: LICENSE  Readme.md
ai-inference/: .bumpversion.cfg  .dockerignore  .gitignore  .pre-commit-config.yaml  Add_new_ai_inference.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  compose.yml  create_new_inference_helper.py  mkdocs.yml  pyproject.toml  setup.cfg
ai-inference/ai_inference/: __init__.py  job.py  main.py  utils.py
ai-inference/ai_inference/inference/: __init__.py  common.py  routes.py
ai-inference/ai_inference/inference/maskrcnn_4classes/: categories.json  inference.py
ai-inference/ai_inference/inference/maskrcnn_resnet50/: categories.json  inference.py  preprocessing.py
ai-inference/ai_inference/inference/vis_ai/: inference.py  vae_model.py
ai-inference/ai_inference/inference/yolov8/: inference.py
ai-inference/docs/: trigger-ai-inference.puml  usage.md
eoir-ai/: README.md  dataloader.py  inference.py  multispectral_dataloader.py  preprocessing.py  requirements.txt  test_inst_seg_models.py  train_instance_segmentation.py  train_multispectral_instance_segmentation.py  utils.py
feedback-loop/: .gitignore  Readme.md
visai-css/: .dockerignore  Dockerfile.udp  LICENSE  README.md  docker-compose.yml  host_ip.env  inference.py  main_thread.py  requirements.txt  vae_model.py  vis_anomaly_sender.py
visai-css/docs/: visai_optimare.puml
visai-train/: .dockerignore  .gitignore  Dockerfile.train  Readme.md  docker-compose.yml  main.py  train.env  vae_model.py
